--- a/index.html
+++ b/index.html
@@ -5,20 +5,15 @@
   <title>Login Secreto</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
       background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
       font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 0;
+      color: #ffffff;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      color: #ffffff;
+      margin: 0;
     }
 
     .container {
@@ -29,18 +24,6 @@
       text-align: center;
       max-width: 350px;
       width: 100%;
-      animation: fadeIn 1s ease-in-out;
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(-20px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
     }
 
     h2 {
@@ -48,92 +31,34 @@
       color: #00e5ff;
     }
 
-    input {
+    input, button {
       width: 100%;
       padding: 12px;
       margin: 10px 0;
-      border: none;
       border-radius: 8px;
+      border: none;
+      font-size: 1em;
+    }
+
+    input {
       background-color: #1e1e2f;
       color: #fff;
-      font-size: 1em;
     }
 
     button {
-      background: #00e5ff;
+      background-color: #00e5ff;
       color: #000;
-      border: none;
-      padding: 12px 20px;
-      border-radius: 8px;
       font-weight: bold;
-      font-size: 1em;
       cursor: pointer;
-      transition: background 0.3s ease;
-      margin-top: 10px;
     }
 
     button:hover {
-      background: #00bcd4;
+      background-color: #00bcd4;
     }
 
     #mensagem {
       margin-top: 20px;
-      font-size: 1.1em;
-      white-space: pre-wrap;
-      color: #aaffaa;
-    }
-
-    /* Modal styles */
-    .modal-bg {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background: rgba(0, 0, 0, 0.85);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      visibility: hidden;
-      opacity: 0;
-      transition: opacity 0.3s ease;
-      z-index: 1000;
-    }
-
-    .modal-bg.active {
-      visibility: visible;
-      opacity: 1;
-    }
-
-    .modal-content {
-      background: #12122b;
-      padding: 30px 40px;
-      border-radius: 16px;
-      box-shadow: 0 0 20px #00e5ff;
-      max-width: 400px;
-      text-align: center;
-      color: #00e5ff;
-      font-weight: bold;
-      font-size: 1.3em;
-      line-height: 1.4;
-      position: relative;
-    }
-
-    .modal-content button {
-      background: #00e5ff;
-      color: #000;
-      border: none;
-      border-radius: 8px;
-      padding: 10px 20px;
-      font-size: 1em;
-      font-weight: bold;
-      cursor: pointer;
-      margin-top: 25px;
-      transition: background 0.3s ease;
-    }
-
-    .modal-content button:hover {
-      background: #00bcd4;
+      color: #ff6b6b;
     }
   </style>
 </head>
@@ -146,14 +71,6 @@
     <p id="mensagem"></p>
   </div>
 
-  <!-- Modal -->
-  <div id="modal" class="modal-bg">
-    <div class="modal-content">
-      <p id="flagText"></p>
-      <button onclick="fecharModal()">Fechar</button>
-    </div>
-  </div>
-
   <script>
     function base64decode(str) {
       return atob(str);
@@ -163,34 +80,15 @@
       const u = document.getElementById("username").value.trim();
       const p = document.getElementById("password").value.trim();
 
-      // Base64 de "kitkat"
-      const senhaCifrada = "a2l0a2F0";
+      const senhaCifrada = "a2l0a2F0"; // "kitkat"
 
-      // Base64 de "CD25{ninjaDeHashes}"
-      const flagCifrada = "Q0QyNXtuaW5qYURlSGFzaGVzfQ==";
-
-      const correta = base64decode(senhaCifrada);
-      const flag = base64decode(flagCifrada);
-
-      if (u.toLowerCase() === "admin" && p === correta) {
-        abrirModal(flag);
-        document.getElementById("mensagem").innerText = "";
+      if (u.toLowerCase() === "admin" && p === base64decode(senhaCifrada)) {
+        // Redireciona para inbox
+        window.location.href = "inbox.html";
       } else {
         document.getElementById("mensagem").innerText =
           "❌ Nome de utilizador ou palavra-passe incorretos.";
       }
-    }
-
-    function abrirModal(texto) {
-      const modal = document.getElementById("modal");
-      const flagText = document.getElementById("flagText");
-      flagText.textContent = `🏁 ${texto}`;
-      modal.classList.add("active");
-    }
-
-    function fecharModal() {
-      const modal = document.getElementById("modal");
-      modal.classList.remove("active");
     }
   </script>
 </body>
