--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>🔐 Cofre Digital</h2>
+    <h2>Login Secreto</h2>
     <input type="text" id="username" placeholder="Utilizador" />
     <input type="password" id="password" placeholder="Palavra-passe" />
     <button onclick="verificar()">Entrar</button>
